[project]
name = "dalab"
version = "0.0.3"
description = "A comprehensive collection of ComfyUI nodes for Flux, Wan2.2, Qwen models, and Feishu integration."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = ["comfyui", "flux", "wan", "qwen", "feishu", "audio", "video"]

authors = [
  { name = "dauncle2026", email = "dauncle2026@gmail.com" }
]

dependencies = [
    "openai",
    "opencv-python",
    "lark-oapi",
    "matplotlib",
    "timm",
    "librosa",
    "omegaconf",
    "json5",
    "munch",
    "modelscope",
    "accelerate",
    "descript-audiotools",
    "WeTextProcessing",
    "wetext",
    "hyperpyyaml",
    "onnxruntime-gpu",
    "openai-whisper",
    "conformer",
    "diffusers",
    "hydra-core",
    "lightning",
    "gdown",
    "x_transformers",
    "wget",
    "pyarrow",
    "pyworld",
    "torchcodec",
    "inflect",
    "funasr"
]


[project.urls]
Repository = "https://github.com/dauncle2026/ComfyUI-DALab"
Documentation = "https://github.com/dauncle2026/ComfyUI-DALab/wiki"
"Bug Tracker" = "https://github.com/dauncle2026/ComfyUI-DALab/issues"

[tool.comfy]
PublisherId = "dauncle"
DisplayName = "ComfyUI-DALab"
Icon = "https://raw.githubusercontent.com/dauncle2026/ComfyUI-DALab/refs/heads/master/DALab_icon.jpg"
Banner = "https://raw.githubusercontent.com/dauncle2026/ComfyUI-DALab/refs/heads/master/DALab_banner.jpg"
requires-comfyui = ">=0.3.0"
